[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/icons/item_add.png" type="Texture" id=1]
[ext_resource path="res://theme/thol_launcher_theme_1.tres" type="Theme" id=2]
[ext_resource path="res://assets/_reusable/dropdown/dropdown_popup.gd" type="Script" id=3]
[ext_resource path="res://theme/DropdownEntry/dropdown_entry_focus.tres" type="StyleBox" id=4]
[ext_resource path="res://theme/DropdownEntry/dropdown_entry.tres" type="StyleBox" id=5]
[ext_resource path="res://theme/DropdownEntry/dropdown_entry_pressed.tres" type="StyleBox" id=6]

[node name="Control" type="PopupPanel"]
margin_right = 98.0
margin_bottom = 44.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sps_scrollcontainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 88.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 108 )
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="sps_container" type="VBoxContainer" parent="VBoxContainer/sps_scrollcontainer"]
margin_right = 88.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 88.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 88.0
margin_bottom = 139.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Name"
align = 0

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 88.0
margin_bottom = 27.0
icon = ExtResource( 1 )
flat = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
